fix sizing on smaller windows

--- a/src/Components/Info/About/About.css
+++ b/src/Components/Info/About/About.css
@@ -1,5 +1,6 @@
 .About {
     text-align: left;
+    padding-bottom: 10%;
 }
 
 .About .header {
